# pufferfish2

./: .gitignore  Cargo.toml  README.md
benches/: bench_wm.rs
src/: cpp.rs  io.rs  lib.rs  log.rs  serde_ext.rs  test_utils.rs  wm.rs
src/benchmarking/: mod.rs  refseq.rs
src/boophf/: hash.rs  mod.rs
src/index/: base_index.rs  compact.rs  consts.rs  contig.rs  dense_index.rs  info.rs  mod.rs  prelude.rs  projected_hits.rs  refseq_iter.rs  sparse_index.rs  tests.rs
src/index/sparse_contig_index/: contig_samplers.rs  filter_rank_select.rs  mod.rs  occs.rs  wm_ref_walker.rs  wm_sparse_contig_table.rs  wm_sparse_dense_index.rs  wm_sparse_projected_hits.rs  wm_sparse_sparse_index.rs
src/index/validate/: mod.rs  validate_contigs.rs
src/seq/: mod.rs
test_data/: example_100_10.json  example_10_100.json  example_1e6_1e3.json
test_data/small_txome_index/: info.json
test_data/small_txome_index_sparse/: info.json  versionInfo.json
test_data/tiny-multi-refs/: tilings.txt  tiny-multi-refs.ctg  tiny-multi-refs.fasta
test_data/tiny-multi-refs/tiny-multi-refs_index/: info.json
test_data/tiny-rc_index/: info.json
test_data/tiny_index/: info.json  tiny.fasta
test_data/yeast-180_index/: info.json
test_data/yeast_chr01_index/: info.json
